--- a/task2/config/lang/en.json
+++ b/task2/config/lang/en.json
@@ -24,7 +24,7 @@
         "ua": "Ukrainian"
     },
     "plot": {
-        "title": "{} Exchange Rate",
+        "title": "{} Exchange Rate (UAH)",
         "side": "",
         "bottom": "Days",
         "legend": {
