--- a/task2/config/lang/ua.json
+++ b/task2/config/lang/ua.json
@@ -24,7 +24,7 @@
         "ua": "Українська"
     },
     "plot": {
-        "title": "{}: Обмінний курс",
+        "title": "{}: обмінний курс (грн)",
         "side": "",
         "bottom": "Дні",
         "legend": {
